# icc-api-crm

./: .gitignore  LICENSE  README.MD  alembic.ini  docker-compose.yaml  main.py  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 2ccc3e74cdce_add_datatime_in_user.py  bce131b0e7f1_add_order_models.py  f051f59a4f81_initial_migration.py
core/: database.py  settings.py
models/: __init__.py  order.py  user.py
repositories/: user.py
routes/v1/: __init__.py  auth.py  user.py
schemes/: user.py
utils/: jwt.py
