[project]
name = "icc-api-crm"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.30.0",
    "fastapi[standard]>=0.115.8",
    "psycopg2-binary>=2.9.10",
    "pyjwt==2.10.1",
    "result>=0.17.0",
    "sqlalchemy[asyncio]>=2.0.38",
    "uvicorn>=0.34.0",
]

[dependency-groups]
dev = [
    "alembic>=1.14.1",
    "pytest>=8.3.4",
]

